--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,7 @@ body {
     max-width: 1140px;
     padding: 0 20px;
     margin: 0 auto;
+    text-align: justify;
 }
 
 section {
@@ -45,7 +46,7 @@ section {
 
 .road {
   position: relative;
-  min-height: 300px;
+  min-height: 400px;
   background-image: url(/images/road.jpg);
   background-size: cover;
   background-position: center;
