Change source background image

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,7 +47,7 @@ section {
 .road {
   position: relative;
   min-height: 400px;
-  background-image: url(/images/road.jpg);
+  background-image: url(https://images.pexels.com/photos/38537/woodland-road-falling-leaf-natural-38537.jpeg);
   background-size: cover;
   background-position: center;
   color: $text-light;
