Change source of background-image

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -117,7 +117,7 @@ nav {
   position: relative;
   margin-top: 40px;
   min-height: 400px;
-  background-image: url(/images/road_g.jpg);  //https://images.pexels.com/photos/38537/woodland-road-falling-leaf-natural-38537.jpeg
+  background-image: url(https://images.unsplash.com/photo-1553970105-9b6beb48ad9c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1888&q=80);
   background-size: cover;
   background-position: center;
   color: $text-light;
