--- a/sass/style.scss
+++ b/sass/style.scss
@@ -136,7 +136,7 @@ nav {
   position: relative;
   margin-top: 40px;
   min-height: 400px;
-  background-image: url("/images/road.jpg");
+  background-image: url("../images/road.jpg");
   background-size: cover;
   background-position: center;
   color: $text-light;
