--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,7 +14,7 @@ $font-text: 'Open Sans', sans-serif;
 }
 
 body {
-  min-width: 600px;
+  min-width: 300px;/////
   margin: 0;
   font-size: 16px;
   line-height: 1.7;
@@ -62,7 +62,7 @@ section {
 /* Navigation */
 
 nav {
-  min-width: 600px;
+  min-width: 300px;//////
   position: fixed;
   margin-bottom: 40px;
   z-index: 1;
@@ -177,7 +177,7 @@ nav {
 
 .info {
   max-height: 600px;
-  min-width: 600px;
+  min-width: 300px;
   color: $text-light;
   background: $color-first;
   .row {
@@ -229,6 +229,15 @@ footer {
 
   .doctor_site {
     max-height: 60px;
+    display: none;
+  }
+
+  .medical_site {
+    display: none;
+  }
+
+  .phone_symbol, .phone_number {
+    //display: none;
   }
 
 }
