--- a/sass/style.scss
+++ b/sass/style.scss
@@ -206,6 +206,7 @@ nav {
         }
         .phone_number {
           font-size: 18px;
+          text-decoration: none;
         }
       }
     }
